infrastructure.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Simple WebApp + DB Architecture

Resources:

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyProjectVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: PrivateSubnet

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  WebAppSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow 80 and DB traffic
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
        - CidrIp: 10.0.2.0/24
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306

  DBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow DB only from WebApp
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - CidrIp: 10.0.1.0/24
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306

  WebAppEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-04ff98ccbfa41c9ad # Amazon Linux 2023 (Frankfurt)
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref WebAppSG
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "Hello World from WebApp" > /var/www/html/index.html

  DBEC2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-04ff98ccbfa41c9ad
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref DBSG
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y mariadb-server
          systemctl start mariadb
          systemctl enable mariadb
          echo "CREATE DATABASE testdb;" > /tmp/init.sql
